# CVRP_Sol

./: .gitignore  CMakeLists.txt  README.md  run_cvrp.bat  run_multi.bat
.cursor/rules/: all.mdc
include/: genetic_solver.h  loader.h  types.h
k/: run_1.txt  run_10.txt  run_11.txt  run_12.txt  run_13.txt  run_14.txt  run_15.txt  run_16.txt  run_17.txt  run_18.txt  run_19.txt  run_2.txt  run_20.txt  run_3.txt  run_4.txt  run_5.txt  run_6.txt  run_7.txt  run_8.txt  run_9.txt  summary.txt
multi_results/: log_1.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  run_1.sol  run_2.sol  run_3.sol  run_4.sol  run_5.sol  summary.txt
results/: A-n32-k5(1).sol  A-n32-k5(2).sol  A-n32-k5(3).sol  A-n32-k5(4).sol  A-n32-k5(5).sol  A-n32-k5(6).sol  A-n32-k5.sol
src/: genetic_solver.cpp  loader.cpp  main_genetic.cpp
